--- a/CSS/style.css
+++ b/CSS/style.css
@@ -319,11 +319,11 @@ p {
     justify-content: center;
     align-items: center;
     opacity: 0;
-    transition: all 1s ease;
+    transition: all .5s ease;
 }
 
 .project-contain img {
-    transition: all 1s ease;
+    transition: all .5s ease;
 }
 
 .project-contain:hover .content-contain {
